Fix homepage thumbnail stretching image issue

--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,9 @@ h1 {
 }
 
 .thumbnail {
-    width: 100%;
-    height: 90%;
-    object-fit: fill;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    width: 245px;
     border-bottom: 2px solid #D9D9D9;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
@@ -53,7 +53,7 @@ h1 {
     text-align: center;
     font-weight: bolder;
     text-decoration: none;
-    margin-top: 6px;
+    margin-top: 12px;
     width: 100%;
     height: 10%;
 }
